--- a/site/site.css
+++ b/site/site.css
@@ -26,15 +26,27 @@ body {
 
 .nav-links a {
     text-decoration: none;
-    color: #555;
+    color: #000000;
     margin: 0 15px;
     font-weight: 500;
     transition: color 0.3s;
     margin: bottom 10px; ;
 }
-
+ #a22{
+text-decoration: none;
+    color: #000000c4;
+    margin :top 20px;
+    font-weight: 500;
+    transition: color 0.3s;
+    margin: bottom 10px; ;
+}
+ 
+#span1{
+    margin-bottom: 21px;
+}
 .nav-links a:hover {
     color: #F84F66; 
+    font-size: 20px;
 }
 
 .icons  {
@@ -43,11 +55,15 @@ body {
     cursor: pointer;
 }
 
-
+ #a22:hover {
+color: #F84F66; 
+    font-size: 20px;
+}
 .hero-section {
     
     
     background: url('identical-quadruplets-noelle-mirabella-1.jpg') no-repeat center left;
+    
     background-size:auto;
     display: flex;
     align-items:center;
@@ -116,7 +132,7 @@ body {
 .feature-item h3 {
     font-size: 18px;
     margin-bottom: 5px;
-    color: #333;
+    color: #949494;
 }
 
 .feature-item p {
@@ -124,6 +140,89 @@ body {
     color: #999;
 }
 
+/* درباره ما */
 
+body {
+    font-family: Tahoma, sans-serif;
+    line-height: 1.7;
+    margin: 0;
+    padding: 0;
+    background-color: #f7f7f7;
+    color: #333;
+}
+
+.about-container {
+    max-width: 900px;
+    margin: 40px auto;
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+}
+
+header h1 {
+    text-align: center;
+    color: #666666; 
+    font-size: 2em;
+    margin-bottom: 30px;
+    border-bottom: 2px solid #eee;
+    padding-bottom: 15px;
+}
+
+section {
+    margin-bottom: 30px;
+    padding: 15px 0;
+}
+
+h2 {
+    color: #8e01b9; 
+    font-size: 1.5em;
+    border-right: 5px solid #000000;
+    padding-right: 10px;
+    margin-bottom: 15px;
+}
+
+
+.commitment-list {
+    list-style: none;
+    padding: 0;
+}
+
+.commitment-list li {
+    background-color: #e6f7ff; 
+    margin-bottom: 10px;
+    padding: 12px;
+    border-radius: 5px;
+}
+
+.commitment-list strong {
+    color: #007bff;
+    display: block;
+    margin-bottom: 3px;
+}
+
+
+.cta {
+    text-align: center;
+    padding: 30px;
+    border-top: 1px dashed #ccc;
+    margin-top: 30px;
+}
+
+.cta-button {
+    display: inline-block;
+    background-color: #4CAF50; 
+    color: white;
+    padding: 12px 25px;
+    text-decoration: none;
+    border-radius: 30px;
+    font-weight: bold;
+    margin-top: 15px;
+    transition: background-color 0.3s;
+}
+
+.cta-button:hover {
+    background-color: #145f18;
+}
 
 
