--- a/site/site.css
+++ b/site/site.css
@@ -16,27 +16,40 @@ body {
     padding: 15px 50px;
     border-bottom: 1px solid #eee;
     background-color: #fff;
+    margin-bottom: 25px;
 }
 
 .logo {
     font-size: 24px;
-    font-weight: 900; 
-    color: #000;
+    font-weight: bolder; 
+    color: #000000;
 }
 
 .nav-links a {
     text-decoration: none;
     color: #000000;
     margin: 0 15px;
-    font-weight: 500;
+    font-weight: bold;
     transition: color 0.3s;
     margin: bottom 10px; ;
 }
+
+#aicons{
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+#aicons:hover {
+    background-color: #666;
+    font-size: large;
+    border-radius: 15%;
+}
+
  #a22{
 text-decoration: none;
     color: #000000c4;
-    margin :top 20px;
-    font-weight: 500;
+    
+    font-weight: bold;
     transition: color 0.3s;
     margin: bottom 10px; ;
 }
@@ -45,6 +58,11 @@ text-decoration: none;
     margin-bottom: 21px;
 }
 .nav-links a:hover {
+    color: #F84F66; 
+    font-size: ;
+}
+
+#al1 {
     color: #F84F66; 
     font-size: 20px;
 }
@@ -57,18 +75,18 @@ text-decoration: none;
 
  #a22:hover {
 color: #F84F66; 
-    font-size: 20px;
+    
 }
 .hero-section {
     
     
-    background: url('identical-quadruplets-noelle-mirabella-1.jpg') no-repeat center left;
     
     background-size:auto;
     display: flex;
     align-items:center;
     padding: 0 50px;
 }
+
 
 .hero-content {
     max-width: 450px;
@@ -78,12 +96,16 @@ color: #F84F66;
     border-radius: 10px;
 }
 
+
+
 .hero-content h1 {
     font-size: 48px;
     font-weight: 900;
     margin-bottom: 25px;
     line-height: 1.2;
 }
+
+
 
 .hero-content p {
     font-size: 18px;
@@ -108,6 +130,10 @@ color: #F84F66;
     background-color: #d1132a;
 }
 
+#img1 {
+    width: 45%;
+    
+}
 
 .features {
     display: flex;
@@ -149,6 +175,15 @@ body {
     padding: 0;
     background-color: #f7f7f7;
     color: #333;
+}
+
+#adar{
+  color: #F84F66; 
+    font-size: 20px;
+}
+
+#adar :hover{
+
 }
 
 .about-container {
