--- a/site-project-main/site.css
+++ b/site-project-main/site.css
@@ -87,14 +87,14 @@ color: #F84F66;
     
 }
 .hero-section {
-    background-size:auto;
+    background-size:flex;
     display: flex;
     align-items:center;
     padding: 0 50px;
     text-align: center;
 }
 .hero-content {
-    max-width: 450px;
+    max-width: flex;
     padding: 30px;
     margin-right: 17%;
      background: rgba(141, 123, 20, 0.527); 
